# backend-skeleton

./: .coveragerc  .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  startproject  tasks.py
.circleci/: config.yml
.github/workflows/: default.yml  schedule.yml  test.yml
_base/: .gitignore  Makefile  Pipfile  manage.py  pytest.ini
_base/project_name/apps/account/: apps.py  models.py
_base/project_name/settings/: django.py  environment.py  secret_key.py
_celery/project_name/: celery.py
_celery/project_name/settings/: celery.py
app_template/_base/: apps.py-tpl
contrib/docker/: docker-compose-local.yml
hooks/: post_gen_project.py
project_template/_base/: .env  .gitignore  Pipfile  README.md  circle.yml  pylava.ini
project_template/_base/.circleci/: config.yml
project_template/_base/api/: .env  Makefile  pylama.ini  pyproject.toml  pytest.ini
project_template/_base/api/project_name/: urls.py
project_template/_base/api/project_name/apps/account/: admin.py  apps.py  forms.py  managers.py  models.py
project_template/_base/api/project_name/apps/common/: apps.py
project_template/_base/api/project_name/settings/: django.py  environment.py
project_template/_base/api/requirements/: common.in  dev.in
project_template/_base/project_name/: urls.py
project_template/_base/project_name/apps/account/: forms.py  managers.py  models.py
project_template/_base/project_name/apps/account/migrations/: 0001_initial.py
project_template/_base/project_name/settings/: __init__.py  account.py  django.py  project_name.py
project_template/_celery/api/project_name/: celery.py
project_template/_celery/api/project_name/settings/: contrib.py
project_template/_drf/project_name/settings/: restapi.py
tests/: test_dummy.py  test_generate_requirements_in_file_hook.py
{{ cookiecutter.project_slug }}/: .bandit  .dockerignore  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  fabfile.py  pyproject.toml
{{ cookiecutter.project_slug }}/.circleci/: config.yml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/api/: .coveragerc  .env.example  .pylintrc  Makefile  conftest.py  manage.py  pylama.ini  pyproject.toml  pytest.ini
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/: __init__.py  asgi.py  celery.py  conftest.py  loggers.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/: admin.py  apps.py  exceptions.py  selectors.py  tasks.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/api/: authentication.py  permissions.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/api/v1/: urls.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/api/v1/serializers/: login.py  password.py  registration.py  user_profile.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/api/v1/views/: login.py  password.py  registration.py  user_profile.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/migrations/: 0001_initial.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/models/: __init__.py  user_account.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/services/: login.py  notifications.py  password.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/tests/: test_api_permissions.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/tests/test_api/: test_login_api.py  test_logout_api.py  test_registration_api.py  test_user_profile_api.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/tests/test_models/: test_user_model.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/tests/test_selectors/: test_get_users_selector.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/tests/test_serializers/: test_change_password_serializer.py  test_confirm_reset_password_serializer.py  test_login_serializer.py  test_registration_serializer.py  test_reset_password_serializer.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/accounts/tests/test_services/: test_login_service.py  test_password_service.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/common/: apps.py  exceptions.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/common/management/commands/: generate_secretkey.py  startapp.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/common/models/: __init__.py  core.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/apps/common/utils/: redis.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/fixtures/: __init__.py  api_client.py  user_account.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/settings/: __init__.py  django.py  environment.py  {{ cookiecutter.project_slug }}.py  {{cookiecutter.project_slug}}.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/settings/contrib/: __init__.py  celery.py  jwt_auth.py  redis.py  rest_framework.py  sentry.py  storages.py  swagger.py
{{ cookiecutter.project_slug }}/api/{{ cookiecutter.project_slug }}/templates/accounts/notifications/: base-email.html  user-reset-password.html
{{ cookiecutter.project_slug }}/docker/: docker-compose-local.yml  docker-compose.yml
{{ cookiecutter.project_slug }}/docker/images/api/: Dockerfile
{{ cookiecutter.project_slug }}/docker/images/api/files/: entrypoint.sh
{{ cookiecutter.project_slug }}/docs/: architecture_overview.md  commands.md  docker.md  pre_commit_hook.md
{{ cookiecutter.project_slug }}/fabric_scripts/: _common.py  backend.py  celery.py  compose.py  frontend.py  git.py  pip_tools.py  test.py
(+16 files in other folders)
