[tool.poetry]
name = "backend-skeleton"
version = "0.1.0"
description = ""
authors = ["DS <r@djangostars.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cookiecutter = "^2.6.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
invoke = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
